RESOLVED FIXED130920
[CSS Grid Layout] The 'auto' height must be adapted to the item's margin.
https://bugs.webkit.org/show_bug.cgi?id=130920
Summary [CSS Grid Layout] The 'auto' height must be adapted to the item's margin.
Javier Fernandez
Reported 2014-03-28 16:59:17 PDT
When using 'auto' on grid-template-{rows-columns} properties, the vertical margin should be taken into account when computing the item's logical height, so the grid container's height is adapted accordingly.
Attachments
Test cases to reproduce the issue. (801 bytes, text/html)
2014-03-28 17:00 PDT, Javier Fernandez
no flags
Screenshot of the issue. (1.90 KB, image/png)
2014-03-28 17:02 PDT, Javier Fernandez
no flags
Patch (10.56 KB, patch)
2014-03-28 17:12 PDT, Javier Fernandez
no flags
Javier Fernandez
Comment 1 2014-03-28 17:00:35 PDT
Created attachment 228095 [details] Test cases to reproduce the issue.
Javier Fernandez
Comment 2 2014-03-28 17:02:03 PDT
Created attachment 228096 [details] Screenshot of the issue.
Javier Fernandez
Comment 3 2014-03-28 17:12:42 PDT
Darin Adler
Comment 4 2014-03-28 22:13:54 PDT
Comment on attachment 228097 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=228097&action=review > LayoutTests/fast/css-grid-layout/grid-item-margin-auto-columns-rows-expected.txt:17 > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS > +PASS I’m not really happy with these check-layout tests. Could we make this a reference test instead perhaps?
WebKit Commit Bot
Comment 5 2014-03-28 22:44:34 PDT
Comment on attachment 228097 [details] Patch Clearing flags on attachment: 228097 Committed r166450: <http://trac.webkit.org/changeset/166450>
WebKit Commit Bot
Comment 6 2014-03-28 22:44:38 PDT
All reviewed patches have been landed. Closing bug.
Javier Fernandez
Comment 7 2014-03-29 14:03:03 PDT
(In reply to comment #4) > (From update of attachment 228097 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=228097&action=review > > > LayoutTests/fast/css-grid-layout/grid-item-margin-auto-columns-rows-expected.txt:17 > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > +PASS > > I’m not really happy with these check-layout tests. Could we make this a reference test instead perhaps? sure, actually I agree with your point. I've filed bug #130935 to do not forget.
Note You need to log in before you can comment on or make changes to this bug.