[CSS Grid Layout] The 'auto' height must be adapted to the item's margin. https://bugs.webkit.org/show_bug.cgi?id=130920

Patch by Javier Fernandez <jfernandez@igalia.com> on 2014-03-28
Reviewed by Darin Adler.

Source/WebCore:

Adding the grid-item's marginLogicalHeight to the used breadth when computing
content based grid-track sizes.

Test: fast/css-grid-layout/grid-item-margin-auto-columns-rows.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::logicalContentHeightForChild):

LayoutTests:

* fast/css-grid-layout/grid-item-margin-auto-columns-rows-expected.txt: Added.
* fast/css-grid-layout/grid-item-margin-auto-columns-rows.html: Added.

Canonical link: https://commits.webkit.org/148966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166450 268f45cc-cd09-0410-ab3c-d52691b4dbfc